[tool.poetry]
name = "contest-bitnp"
version = "0.1.0"
description = "国防知识竞赛"
authors = [
    "Y.D.X. <73375426+YDX-2147483647@users.noreply.github.com>",
    "Phoupraw <Phoupraw@users.noreply.github.com>",
]
readme = "README.md"
packages = [{include = "contest"}]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.2"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
mypy = "^1.4.1"
django-stubs = {extras = ["compatible-mypy"], version = "^4.2.3"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "default"

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "N",  # pep8-naming
]
line-length = 95
ignore-init-module-imports = true

[tool.black]
line-length = 95

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
mypy_path = "$MYPY_CONFIG_FILE_DIR/contest/"

[tool.django-stubs]
django_settings_module = "contest.settings"
