[tool.poetry]
name = "contest-bitnp"
version = "0.1.0"
description = "国防知识竞赛"
authors = [
    "Y.D.X. <73375426+YDX-2147483647@users.noreply.github.com>",
    "Phoupraw <Phoupraw@users.noreply.github.com>",
]
readme = "README.md"
packages = [{ include = "contest" }]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.2"
humanize = "^4.7.0"
django-cas-ng = "^4.3.0"
django-tailwind = "^3.6.0"
gunicorn = "^21.2.0"
uvicorn = "^0.23.2"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
mypy = "^1.4.1"
django-stubs = { extras = ["compatible-mypy"], version = "^4.2.3" }
ipython = "^8.14.0"
django-tailwind = { extras = ["reload"], version = "^3.6.0" }

[tool.poetry.group.coverage]
optional = true

[tool.poetry.group.coverage.dependencies]
coverage = { extras = ["toml"], version = "^7.2.7" }
django-coverage-plugin = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "default"

[tool.ruff]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "DJ",  # flake8-django
    "FA",  # flake8-future-annotations
    "PYI", # flake8-pyi
    "TID", # flake8-tidy-imports
    "TCH", # flake8-type-checking
    "PGH", # pygrep-hooks
]
ignore = [
    "D105", # undocumented-magic-method
    "D203", # in favor of blank-line-before-class (D211)
    "D213", # in favor of multi-line-summary-first-line (D212)
    "D400", # ends-in-period, because of Chinese
    "D415", # ends-in-punctuation, because of Chinese
]
line-length = 95
ignore-init-module-imports = true

[tool.ruff.per-file-ignores]
# No need to document Django defaults
# - D100: Missing docstring in public module
# - D101: Missing docstring in public class
# - D104: Missing docstring in public package
"apps.py" = ["D100", "D101"]
"admin.py" = ["D100", "D101"]
"models.py" = [
    "D100",
    "D101", # 有`Meta`即可
    "D102", # undocumented-public-method，有`@admin.display`即可
    "D106", # undocumented-public-nested-class，例如`Meta`
]
"tests.py" = ["D100"]
"urls.py" = ["D100"]
"views.py" = ["D100"]
"**/templatetags/__init__.py" = ["D104"]

[tool.black]
line-length = 95

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
mypy_path = "$MYPY_CONFIG_FILE_DIR/contest/"

[tool.django-stubs]
django_settings_module = "contest.settings"

[tool.djlint]
indent = 2
format_attribute_template_tags = true
profile = "django"
ignore = "H006"    # `<img>` tag should have `height` and `width` attributes.

[tool.coverage.run]
command_line = "contest/manage.py test quiz"
source = ["contest/"]
omit = [
    "**/migrations/**",
    "**/node_modules/**",
    "contest/manage.py",
    "contest/contest/asgi.py",
    "contest/contest/wsgi.py",
]
plugins = [
    "django_coverage_plugin"
]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "def __str__",
]
